finish componnents